Correcting already answered ids type in session + other verifications

--- a/views/test.ejs
+++ b/views/test.ejs
@@ -72,10 +72,12 @@
         $('#response').val('');
         $('.count').html(count + ' / ' + totalCount);
         $('#response-value').html(strResponse);
+        $('#response').focus();
     });
 
     socket.on('wrong-answer', function () {
         $('#block-message').html('Wrong answer');
+        $('#response').focus();
       console.log('non');
     });
 
