--- a/views/test.ejs
+++ b/views/test.ejs
@@ -27,6 +27,7 @@
 <div id="block-add-word">
     <form action="/response/<%= id %>/<%= language %>" method="get" class="form-add-translation" autocomplete="off"> 
         <input type="text" name="response" id="response" value="<%= strGuess %>" autofocus>
+        <input type="checkbox" name="answerasked" id="answer-asked" style="display: none;"/>
         <br/>
         <input type="submit" id="submit-response">
         <br/>
@@ -48,12 +49,14 @@
     var language = "<%= language %>";
 
     $('#submit-response').click(function(){
-        socket.emit('submit-answer', {answer : $('#response').val(), id : id, language : language});
+        socket.emit('submit-answer', {answer : $('#response').val(), id : id, language : language, boolanswerasked : $('#answer-asked').is(":checked")});
         $('#block-message').html('');
         return false;
     });
 
     socket.on('good-answer', function (data) {
+        $('#answer-asked').prop('checked', false);
+
         id = data.id;
         count = data.count;
         totalCount = data.total;
@@ -78,7 +81,6 @@
     socket.on('wrong-answer', function () {
         $('#block-message').html('Wrong answer');
         $('#response').focus();
-      console.log('non');
     });
 
     socket.on('end-of-the-quizz', function () {
@@ -91,6 +93,7 @@
     
     $('#button-ask-answer').click(function(){
         $('#response').val($('#response-value').html());
+        $('#answer-asked').prop('checked', true);
     });
 
 </script>
