--- a/views/end.ejs
+++ b/views/end.ejs
@@ -22,7 +22,7 @@
 <h1>Fin du test</h1>
 
 <a href="/">Configurer le test</a>
-<a href="/reboot/<%= language %>">Reboot le test</a>
+<a href="/reboot/<%= language %>/<%= numberofwords %>">Reboot le test</a>
 </div>
 
 </body>
