--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
 
 </head>
 <body>
-<h1>Entrainement au vocabulaire anglais</h1>
+<h1><%= words[0].name %> list</h1>
 
 <div id="word-list">
     <ul>
@@ -30,17 +30,17 @@
 
 <div id="block-add-word">
     <form action="/<%= language %>" method="post" class="form-add-translation"> 
-        <label id="title-english-word">Mot en anglais</label>
+        <label id="title-english-word"><%= words[0].name %></label>
         <input type="text" name="englishword" id="english-word" autofocus>
         <br/>
-        <label id="title-french-word">Mot en français</label>
+        <label id="title-french-word">French</label>
         <input type="text" name="frenchword" id="french-word">
         <br/>
         <input type="submit" id="submit-words">
     </form>
 </div>
 
-<a href="/test/<%= language %>">Passer le test Anglais</a>
+<a href="/test/<%= language %>">Take the <%= words[0].name %> test</a>
 
 </body>
 </html>
