--- a/views/test.ejs
+++ b/views/test.ejs
@@ -43,7 +43,7 @@
 
 <div id="response-value" style="display: none;"><%= response %></div>
 
-<a href="/">Configurer le test</a>
+<a href="/<%= language %>">Configurer le test</a>
 <%if (limited == true) { %>
     <a href="/reboot/<%= language %>/<%= numberofwords %>">Reboot le test</a>
     <% } else { %>
