Changing the language setting page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,7 +40,8 @@
     </form>
 </div>
 
-<a href="/test/<%= language %>">Take the <%= words[0].name %> test</a>
+<a href="/test/<%= language %>">Take the <%= words[0].name %> test</a></br>
+<a href="/languages">Configure languages</a>
 
 </body>
 </html>
