--- a/views/test.ejs
+++ b/views/test.ejs
@@ -11,6 +11,7 @@
   <meta name="copyright" content="Morel Karim" />
   <meta name="creation_Date" content="12-02-2020" />
 
+  <!-- Assets -->
   <link rel="stylesheet" href="/style.css" />
   <link href="https://fonts.googleapis.com/css?family=Kosugi&display=swap" rel="stylesheet">
   <script src="/socket.io/socket.io.js"></script>
