Title on word configuration page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,8 +63,8 @@
     </table>
     <br/>
 
-
     <div id="block-add-word">
+        <h3>Add a new word</h3>
     <form action="/<%= language %>" method="post" >
         <div class="form-group">
           <label id="title-english-word" for="english-word"><%= words[0].name %></label>
