Improve the sql requests and adding multiple statements possibility (mainly for requesting languages)

--- a/views/language.ejs
+++ b/views/language.ejs
@@ -57,7 +57,7 @@
             <label id="title-language-slug">Language's slug</label>
             <input type="text" name="slug" id="language-slug-input" class="form-control">
             </div>
-            <input type="submit" id="submit-words" class="btn btn-default">
+            <input type="submit" id="submit-words" class="btn btn-default" value="Submit">
         </form>
     </div>
 
