Adding a limited test button in the config

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -83,6 +83,7 @@
     <br/>
 
 <a href="/test/<%= slug %>"><button class="btn btn-info">Take the <%= language.name %> test</button></a></br><br/>
+<a href="/test/<%= slug %>/50"><button class="btn btn-info">Take the <%= language.name %> limited test (50)</button></a></br><br/>
 <a href="/languages"><button class="btn btn-success">Configure languages</button></a>
 
 </div>
