Add an alert if a word already exists in a language selected when a word is added, without blocking it

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -71,6 +71,12 @@
     </table>
     <br/>
 
+    <% if (message) { %>
+    <div id="block-message" class="alert alert-info" role="alert">
+        <%= message %>
+    </div>
+    <% } %>
+
     <div id="block-add-word">
         <h3>Add a new word</h3>
     <form action="/<%= slug %>" method="post" >
